frontend/src/scss/global.scss
@use 'sass:map';
@use 'vuetify/settings';
@use 'inter-ui/default' as inter-ui with (
  $inter-font-path: 'inter-ui/Inter (web hinted latin)'
);

@include inter-ui.weight-200;
@include inter-ui.weight-400;
@include inter-ui.weight-500;
@include inter-ui.weight-600;

body {
  font-feature-settings: 'ss03', 'calt', 'rlig', 'kern', 'cv05', 'cv07', 'cv08';
}

.text-uppercase {
  font-feature-settings: 'ss03', 'calt', 'rlig', 'kern', 'cv05', 'cv07';
}

.v-toolbar__title {
  font-weight: 500;
}

.v-theme--light.v-application {
  background: #546e7a !important;
}

.v-calendar-daily,
.v-skeleton-loader,
.v-skeleton-loader__actions,
.v-skeleton-loader__article,
.v-skeleton-loader__card-heading,
.v-skeleton-loader__card-text,
.v-skeleton-loader__date-picker,
.v-skeleton-loader__list-item,
.v-skeleton-loader__list-item-avatar,
.v-skeleton-loader__list-item-text,
.v-skeleton-loader__list-item-two-line,
.v-skeleton-loader__list-item-avatar-two-line,
.v-skeleton-loader__list-item-three-line,
.v-skeleton-loader__list-item-avatar-three-line,
.v-skeleton-loader__table-heading,
.v-skeleton-loader__table-thead,
.v-skeleton-loader__table-tbody,
.v-skeleton-loader__table-tfoot {
  background: none !important;
}

.v-skeleton-loader__text {
  margin-bottom: 6px;
}

.v-skeleton-loader__avatar {
  max-width: 100%;
  min-width: 0;
  max-height: 100%;
  min-height: 0;
  width: 100%;
  height: 100%;
}

.v-skeleton-loader__bone {
  gap: 1rem;
}

.v-skeleton-loader--inherit-size .v-skeleton-loader__bone {
  height: inherit !important;
  width: inherit !important;
}

.v-skeleton-loader--no-margin .v-skeleton-loader__bone {
  margin-bottom: 0 !important;
}

.v-btn--outlined:before {
  opacity: 0.08 !important;
}

.v-theme--dark.v-btn.v-btn--outlined:hover::before {
  opacity: 0.16 !important;
}

.w-100 {
  width: 100%;
}

.h-full {
  height: 100%;
}

.v-btn .v-icon {
  --v-icon-size-multiplier: 0.75;
}

.v-application {
  ul.v-list {
    padding-left: 0;
  }

  .min-h-0 {
    min-height: 0;
  }

  .e-title-link {
    color: inherit;
    text-underline-offset: 0.1em;
    text-decoration-color: #1976d2;
    outline-offset: 0.2em;

    &:focus {
      text-decoration-line: none;
    }

    &:hover {
      text-decoration-thickness: 2px;
    }
  }

  .v-alert.text-warning {
    .v-alert__icon {
      color: #d25f00 !important;
    }

    .v-alert__content {
      color: #972e00 !important;
    }

    border-color: #ffe0b2 !important;
  }

  .elevation-4--light {
    box-shadow:
      0 2px 4px -1px rgba(0, 0, 0, 0.1),
      0 4px 5px 0px rgba(0, 0, 0, 0.07),
      0 1px 10px 0px rgba(0, 0, 0, 0.06) !important;
  }
}

.tabular-nums {
  font-variant-numeric: tabular-nums;
}

.v-list-item--link:before {
  border-radius: inherit;
}

.e-form-container + .e-form-container {
  margin-top: 12px;
}

.basis-auto {
  flex-basis: auto !important;
}

.select-left .v-select__selections {
  justify-content: flex-start !important;
}

.flex-full {
  flex: 1 1 0;
}

.v-sheet > .v-expansion-panels,
.v-card > .v-expansion-panels {
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;

  > .v-expansion-panel + .v-expansion-panel {
    border-top: 1px solid #eee;
  }
}

.v-text-field--outlined.v-input--is-readonly:not(.v-input--is-focused):not(
    .v-input--has-state
  )
  > .v-input__control
  > .v-input__slot
  fieldset {
  color: rgb(0, 0, 0, 0.18);
}

.v-text-field.v-input--is-readonly > .v-input__control > .v-input__slot,
.v-text-field.v-input--is-readonly > .v-input__control > .v-input__slot:before,
.v-text-field.v-input--is-readonly > .v-input__control > .v-input__slot:after {
  border-color: transparent !important;
  background-color: transparent !important;
}

.v-text-field--outlined.v-input--is-readonly
  > .v-input__control
  > .v-input__slot
  fieldset {
  border: none !important;
}

.v-input--horizontal .v-input__append {
  margin-left: 0 !important;
}

.v-list-item__title {
  font-size: 16px;
}

.v-list-item__content {
  align-content: flex-start;
}

.dragging {
  cursor: move;
}

.vertical-baseline {
  vertical-align: baseline !important;
}

.pb-safe {
  padding-bottom: env(safe-area-inset-bottom);
}

.mb-safe {
  margin-bottom: env(safe-area-inset-bottom);
}

.d-flow-root {
  display: flow-root;
}

.v-application {
  .d-contents {
    display: contents !important;
  }

  @media #{map.get(settings.$display-breakpoints, 'sm-and-up')} {
    .d-sm-contents {
      display: contents !important;
    }
  }
}

:root {
  --v-theme-overlay-multiplier: 2;
}

.d-grid {
  display: grid;
}

.d-inline-grid {
  display: inline-grid;
}

.pointer-events-none {
  pointer-events: none;
}

.user-select-none {
  user-select: none;
}

.opacity-60 {
  opacity: 0.6;
}

.grid-cols-2 {
  grid-template-columns: 1fr 1fr;
}

.grid-cols-fill {
  grid-template-columns: repeat(auto-fill, 1fr);
}

.currentColor--text {
  color: currentColor !important;
}

.e-button-container {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

.bottom-0 {
  bottom: 0;
}

.bottom-n100 {
  bottom: -100%;
}

.right-0 {
  right: 0;
}

.top-0 {
  top: 0;
}

.justify-items-center {
  justify-items: center;
}

